csComp/includes/css/csStyles.scss
@import 'css3mixins';
/*custom fonts - Bitter, Montserrat*/
$background-dark: #aaa;
$background-light: #eee;
$navbar-height: 50px;

.modal-backdrop.in
{
    display:none;
}

::-webkit-scrollbar {
    width: 5px;
}
 ::-webkit-scrollbar-track {
    background-color: rgba(0,0,0,.1);
}
 ::-webkit-scrollbar-thumb {
    background-color: rgba(0,0,0,.5);
}
@import url('http://fonts.googleapis.com/css?family=Noto Sans|Montserrat');

/*----------------------
webfont
------------------------*/
@font-face {
    font-family: "Sans-serif";
    font-style: normal;
    font-weight: normal;
    /*src: url("ROsanswebtextregular.ttf") format("opentype");*/
}
html,
body,
#map {
    /*font-family: ROSans;*/
    height: 100%;
    overflow: hidden;
    width: 100%;
    position:static;
}
html,
body,
#container {
    height: 100%;
    overflow: hidden;
    width: 100%;
}
.editor-text-input {
    clear: left;
    width: 80%;
}
.editor-title {
    font-size: 18px;
    display: block;
    margin-top: 8px;
}
.map-main {
    position: absolute;
    width: 100%;
    height: 100%;
}

/* layer editor */

.layer-editor-icon
{
    width:30px;height:30px;margin-right:10px;border:none;float:left;background:transparent
}

/** notifications */

.alert-warning
{

}

.ui-pnotify-container
{
    background:gold;
    border-style: none;
    box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
    color: black;

}

.csNotify
{
    position: absolute;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    top:0px;
    width:700px;
    background:white;

}

/* idee */

.dc-table-column {
    padding-right: 10px;
}

.dc-chart g.row text {
            fill: black;
        }

        .gridster > ul {
            list-style: none
        }

        .gridster > ul > li {
            background: white;
            box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
        }

        .chart-title {
            font-size: 20px;
            visibility: visible;
            position: relative;
        }

        .gridster > * {
            padding: 0;
            width: 100% !important;
        }

        .gridster .gs-w {
            list-style: none;
        }

        .scan-loading {
            font-size: 50px;
            width: 100%;
            text-align: center;
            margin-top: 200px;
        }

/* general structure */
 .righttab-box {
            position: absolute;
           left: 50%;
           top:-1px;
            transform: translate(-50%, 0);
            width: 350px;
            height: 50px;
            background: white;
            box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
        }

        .header-box {
            position: absolute;
            left: 25px;
            top: 15px;
                min-width: 400px;
            height: 50px;
            background: white;
            box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
        }

        .lp-tab {
            width: 60px;
            height: 60px;
            float: left;
            padding: 15px;
            /* padding-left: 20px; */
            cursor: pointer;
            border-right-style: solid;
            border-right-width: 1px;
            border-right-color: lightgray;
            font-size: 30px;
            color: black;
        }

        .lp-tab.active {
            background: lightskyblue
        }

        .search-icon {
            width: 40px;
            float: left;
            cursor: pointer;
            border-right-style: solid;
            border-right-width: 1px;
            border-right-color: lightgray;
        }

/* icons */

.maps-icon
{
    background-image:  url('data:image/svg+xml;utf8,<svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 64 64"><style>.st0{clip-path:url(#SVGID_2_)}.st1{clip-path:url(#SVGID_4_)}.st2{clip-path:url(#SVGID_6_)}</style><path d="M30.5 39.6c.4.4.9.5 1.4.5.5 0 1-.2 1.4-.5.5-.5 12.6-11.2 12.6-22.3 0-7.7-6.3-14-14-14s-14 6.3-14 14C18 28.4 30 39.1 30.5 39.6zm1.4-26c2 0 3.6 1.6 3.6 3.7 0 2-1.6 3.7-3.6 3.7s-3.6-1.6-3.6-3.7 1.6-3.7 3.6-3.7z"/><defs><path id="SVGID_1_" d="M0 3.3h64V60H0z"/></defs><clipPath id="SVGID_2_"><use xlink:href="#SVGID_1_" overflow="visible"/></clipPath><path class="st0" d="M58.8 39.6l-1.6-5.7c-.3-.9-1.1-1.6-2.1-1.6H43.6c-.4.6-.9 1.2-1.3 1.9-3.2 4.4-6.5 7.3-6.9 7.6-.9.8-2.1 1.3-3.4 1.3-1.3 0-2.5-.5-3.4-1.3-.4-.3-3.7-3.3-6.9-7.6-.5-.6-.9-1.3-1.3-1.9H8.8c-1 0-1.8.6-2.1 1.6l-1.9 6.8 43.1 7.9 10.9-9z"/><g><defs><path id="SVGID_3_" d="M0 3.3h64V60H0z"/></defs><clipPath id="SVGID_4_"><use xlink:href="#SVGID_3_" overflow="visible"/></clipPath><path class="st1" d="M63.8 57.1l-4.1-14.5-20.6 17.2h22.6c.7 0 1.3-.3 1.7-.9.5-.4.6-1.1.4-1.8z"/></g><g><defs><path id="SVGID_5_" d="M0 3.3h64V60H0z"/></defs><clipPath id="SVGID_6_"><use xlink:href="#SVGID_5_" overflow="visible"/></clipPath><path class="st2" d="M10.5 44.8L4 43.6.1 57.1c-.2.7-.1 1.4.3 1.9s1 .9 1.7.9h8.4V44.8z"/></g><path d="M13.5 45.3v14.5h21L45 51l-31.5-5.7z"/></svg>');
}

.layers-icon
{
    background-image:  url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><g fill="#010002"><path d="M64 19.4L32 2 0 19.4l32 17.4z"/><path d="M32 42.4L5.9 28.2 0 31.5l32 17.4 32-17.4-5.9-3.3z"/><path d="M32 54.5L5.9 40.3 0 43.5l32 17.4 32-17.4-5.9-3.2z"/></g></svg>');
}

.brush-icon
{
    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M25.3 34.5c-1.2 1.3-1.5 2.3-3.1 4.8 1 .7 3 2.4 4.4 5.2 2.7-1.6 4-1.8 5.5-3C41.6 33.5 64.8 4.9 64 4c-.8-.8-30.3 21.4-38.7 30.5zm-5.8 7.1c-4.1-.7-8.2 1.9-10.9 8.4C5.9 56.5 1 59.1.1 59c5.1 1.8 20.5 6.5 24.4-11.3-1.7-4.4-5-6.1-5-6.1z"/></svg>')
}
/* ... */

